[gd_scene load_steps=5 format=3 uid="uid://cite4rajh1233"]

[ext_resource type="Script" path="res://examples/basic/ExampleRock.gd" id="1_6yyly"]
[ext_resource type="Script" path="res://src/AmbitrackVoice.gd" id="2_00or3"]
[ext_resource type="Texture2D" uid="uid://covc2ginv34lv" path="res://examples/basic/sprites/rock.png" id="2_s176d"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3iiyk"]
radius = 1.97876

[node name="ExampleRock" type="Node3D"]
script = ExtResource("1_6yyly")

[node name="AmbitrackVoice" type="Node" parent="."]
script = ExtResource("2_00or3")

[node name="AmbitrackAudioPlayer" type="AudioStreamPlayer3D" parent="."]
volume_db = -6.02
max_distance = 3.0

[node name="Sprites" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="Sprites"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0459731, 0.515373, 0)
billboard = 2
texture_filter = 0
texture = ExtResource("2_s176d")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(0.28811, 0, 0, 0, 0.470545, 0, 0, 0, 0.28811, 0, 0.388012, 0)
shape = SubResource("CylinderShape3D_3iiyk")
